Istio/02-Traffic_management/??-TCP-FORWARDING-(WORKS)/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: helloworld-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
#    - port:
#        number: 443
#        name: secure-http2
#        protocol: HTTP2
#      hosts:
#        - "*"
    - port:
        number: 80
        name: tcp-2
        protocol: TCP
      hosts:
        - "*"
    - port:
        number: 443
        name: tcp-i
        protocol: TCP
      hosts:
        - "*"
#      tls:
#        credentialName: my-tls-cert-secret
#        minProtocolVersion: TLSV1_2

#        mode: PASSTHROUGH
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-vs
spec:
  hosts:
    - "*"
  gateways:
    - helloworld-gateway
  http:
    - match:
        - port: 80
#          hosts:
#            - "hello.si"
      name: helloworld
      route:
        - destination:
            host: helloworld
            port:
              number: 80
  tcp:
    - match:
        - port: 80
      route:
        - destination:
            host: helloworld
            port:
              number: 8080
    - match:
        - port: 443
      route:
        - destination:
            host:  helloworld
            port:
              number: 8443
#
#  tls:
#    - match:
#        - port: 443
#          sniHosts:
#            - "hello.si"
##        - uri:
##            exact: /helloworld
#      route:
#        - destination:
#            host: helloworld
#            port:
#              number: 8443
##            protocol: HTTPS
##      rewrite:
##        uri: "/"
